<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.palladiosimulator.blockchainsystems</groupId>
    <artifactId>org.palladiosimulator.blockchainsystems</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <repositories>
        <repository>
            <id>eclipse-platform</id>
            <url>https://download.eclipse.org/releases/2024-12</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>palladio-simulator</id>
            <url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/nightly/</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>mavenCentral</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <properties>
        <java.version>22</java.version>
        <kotlin.version>2.1.10</kotlin.version>
        <maven.version>3.13.0</maven.version>
        <tycho.version>4.0.10</tycho.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <kotlin.code.style>official</kotlin.code.style>
        <kotlin.compiler.jvmTarget>22</kotlin.compiler.jvmTarget>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>/Users/davisriedel/Desktop/Bachelorarbeit/Palladio.app/Contents/MacOS/PalladioBench</executable>
                    <arguments>
                        <argument>-data</argument>
                        <argument>${project.build.directory}/runtime-workspace</argument>
                        <argument>-consoleLog</argument>
                        <argument>-clean</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>target-platform</module>
        <module>org.palladiosimulator.blockchainsystems.core</module>
        <module>org.palladiosimulator.blockchainsystems.loggers</module>
        <module>org.palladiosimulator.blockchainsystems.doublespending</module>
        <module>org.palladiosimulator.blockchainsystems.bscm</module>
        <module>org.palladiosimulator.blockchainsystems.bscm.edit</module>
        <module>org.palladiosimulator.blockchainsystems.bscm.editor</module>
        <module>org.palladiosimulator.blockchainsystems.plugin</module>
        <module>org.palladiosimulator.blockchainsystems.trilemma</module>
        <!-- <module>org.palladiosimulator.blockchainsystems.bscm.design</module> -->
        <!-- <module>org.palladiosimulator.blockchainsystems.plugin.ui</module> -->
    </modules>
</project>
